--- a/farming/signup.ui
+++ b/farming/signup.ui
@@ -42,6 +42,9 @@
        <height>40</height>
       </rect>
      </property>
+     <property name="placeholderText">
+      <string>Username</string>
+     </property>
     </widget>
     <widget class="QLineEdit" name="Password_lineEdit">
      <property name="geometry">
@@ -51,6 +54,9 @@
        <width>250</width>
        <height>40</height>
       </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Password</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="Phone_lineEdit">
@@ -62,6 +68,9 @@
        <height>40</height>
       </rect>
      </property>
+     <property name="placeholderText">
+      <string>Phone Number</string>
+     </property>
     </widget>
     <widget class="QLineEdit" name="Email_lineEdit">
      <property name="geometry">
@@ -71,6 +80,9 @@
        <width>250</width>
        <height>40</height>
       </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Email</string>
      </property>
     </widget>
     <widget class="QGroupBox" name="captcha_groupBox">
@@ -136,6 +148,9 @@
         <width>120</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="placeholderText">
+       <string>Enter captcha</string>
       </property>
      </widget>
     </widget>
