--- a/farming/gameframe.ui
+++ b/farming/gameframe.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
+    <width>650</width>
     <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Frame</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
   </property>
   <widget class="QLabel" name="Name_label">
    <property name="geometry">
@@ -36,7 +39,7 @@
   <widget class="QLabel" name="coin_picture">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>620</x>
      <y>10</y>
      <width>20</width>
      <height>20</height>
@@ -322,7 +325,7 @@ background-color: rgb(81, 41, 0);</string>
   <widget class="QLabel" name="coins_label">
    <property name="geometry">
     <rect>
-     <x>430</x>
+     <x>580</x>
      <y>10</y>
      <width>40</width>
      <height>20</height>
@@ -353,6 +356,22 @@ background-color: rgb(81, 41, 0);</string>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(81, 41, 0);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="shop_pushButton">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>410</y>
+     <width>80</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">image: url(:/new/prefix1/images12/shop-icon.png);</string>
    </property>
    <property name="text">
     <string/>
