--- a/farming/selection.ui
+++ b/farming/selection.ui
@@ -60,7 +60,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="chicken_pushButton">
+   <widget class="QPushButton" name="hen_pushButton">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -76,100 +76,52 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="cow_Number_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>30</x>
       <y>75</y>
       <width>40</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>7</string>
+     <string>0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="lomb_Number_label">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>75</y>
-      <width>20</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">image: url(:/new/prefix1/images12/coin.png);</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
+      <x>120</x>
       <y>75</y>
       <width>40</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>5</string>
+     <string>0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="hen_Number_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>30</x>
       <y>165</y>
       <width>40</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>3</string>
+     <string>0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>165</y>
-      <width>20</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">image: url(:/new/prefix1/images12/coin.png);</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>75</y>
-      <width>20</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">image: url(:/new/prefix1/images12/coin.png);</string>
-    </property>
-    <property name="text">
-     <string/>
     </property>
    </widget>
   </widget>
@@ -217,68 +169,36 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="corn_Number_label">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>120</x>
       <y>75</y>
       <width>40</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>2</string>
+     <string>0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="wheat_Number_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>30</x>
       <y>75</y>
       <width>40</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>2</string>
+     <string>0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_9">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>75</y>
-      <width>20</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">image: url(:/new/prefix1/images12/coin.png);</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_10">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>75</y>
-      <width>20</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">image: url(:/new/prefix1/images12/coin.png);</string>
-    </property>
-    <property name="text">
-     <string/>
     </property>
    </widget>
   </widget>
